--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-card">
-                        <img src="https://github.com/Arunkalar/arun_kalar_portpolio/tree/main/assets/arunback-removebg-preview.png" alt="Arun Kalar" class="profile-img">
+                        <img src="assets/arunback-removebg-preview.png" alt="Arun Kalar" class="profile-img">
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-image-wrapper">
-                        <img src="https://github.com/Arunkalar/arun_kalar_portpolio/tree/main/assets/arunfront.jpg" alt="About Arun Kalar" class="about-img">
+                        <img src="assets/arunfront.jpg" alt="About Arun Kalar" class="about-img">
                         <div class="about-image-overlay">
                             <div class="about-stats">
                                 <div class="stat-item">
@@ -380,7 +380,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://github.com/Arunkalar/arun_kalar_portpolio/tree/main/assets/community worker.jpg"
+                        <img src="assets/community worker.jpg"
                             alt="Community Worker Project">
                         <div class="project-overlay">
                             <div class="project-links">
@@ -406,7 +406,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://github.com/Arunkalar/arun_kalar_portpolio/tree/main/assets/cropped-logo-steves.png"
+                        <img src="assets/cropped-logo-steves.png"
                             alt="SteveAILab Website">
                         <div class="project-overlay">
                             <div class="project-links">
@@ -432,7 +432,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://github.com/Arunkalar/arun_kalar_portpolio/tree/main/assets/hotelimage.jpeg"
+                        <img src="assets/hotelimage.jpeg"
                             alt="Jay Giriraj Hotel & Restaurant">
                         <div class="project-overlay">
                             <div class="project-links">
